--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,710 +1,23 @@
-.intro {
-  position: relative;
-  @include breakpoint($lg, max) {
-    margin-top: 51px;
-  }
-  &__action {
-    position: absolute;
-    top: 50%;
-    right: $spacing-24;
-    transform: translateY(-50%);
-    color: $shams-white;
-    background-color: $shams-blue;
-    padding: $spacing-8 $spacing-16;
-    border-radius: 999px;
-
-    @include transition-ease(0.3s, background-color);
-    z-index: 1;
-    border: 1px solid $shams-blue;
-    &:hover {
-      @include transition-ease(0.4s, color);
-      color: $shams-blue;
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      visibility: hidden;
-      border-radius: 999px;
-      background-color: $shams-white;
-      z-index: -1;
-      transform: translate(0, -100%);
-    }
-    &:hover::before {
-      visibility: visible;
-      transform: translate(0, 0);
-      animation: wave 0.6s linear;
-    }
-  }
-}
-
-.video {
-  &__bar {
-    width: 100%;
-    height: $spacing-4;
-    position: relative;
-
-    &-total {
-      display: block;
-      background-color: $shams-blue-light;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    &--active {
-      display: block;
-      background-color: $shams-yellow;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      border-radius: 999px;
-      transition: width 0.7s cubic-bezier(0, 0.02, 1, 5.12);
-    }
-  }
-}
-
-.video {
-  display: block;
-  width: 100%;
-}
-
 .hero {
-  position: relative;
-  .card {
-    padding: $spacing-48;
-    width: 468px;
-    background-color: rgba($color: $shams-white, $alpha: 0.9);
-    border-radius: 18px;
-    position: absolute;
-    top: 10%;
-    right: 100px;
-    z-index: 9;
-
-    @include breakpoint($md, max) {
-      width: 90%;
-      top: 50%;
-      right: 50%;
-      transform: translate(50%, -50%);
-    }
-  }
-
-  &__card-title {
-    font-size: $font-xxl;
-    font-weight: bold;
-    color: $shams-blue-dark;
-    margin-bottom: $spacing-24;
-  }
-
-  &__card-description {
-    font-size: $font-md;
-    color: $shams-blue-dark;
-    margin-bottom: $spacing-48;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-
-    line-clamp: 3;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
-
-    overflow: hidden;
-  }
-
-  &__card-action {
-    margin-bottom: $spacing-24;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 220px;
-    height: 48px;
-    background-color: $shams-blue;
-    color: $shams-white;
-    border-radius: 999px;
-    font-size: $font-md;
-    @include transition-ease(0.3s, background-color);
+  &__media {
     position: relative;
-    z-index: 1;
-    border: 1px solid $shams-blue;
-    &:hover {
-      @include transition-ease(0.4s, color);
-      color: $shams-blue;
-    }
-
-    &::before {
+    &:before {
       content: '';
       position: absolute;
-      top: 0;
       left: 0;
-      right: 0;
-      bottom: 0;
-      visibility: hidden;
-      border-radius: 999px;
-      background-color: $shams-white;
-      z-index: -1;
-      transform: translate(0, -100%);
-    }
-    &:hover::before {
-      visibility: visible;
-      transform: translate(0, 0);
-      animation: wave 0.6s linear;
-    }
-  }
-
-  &__action {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: $spacing-24;
-  }
-
-  &__slide-control {
-    border-radius: 999px;
-    width: 40px;
-    height: 40px;
-    background: $shams-white;
-    border: 1px solid $shams-blue;
-    color: $shams-blue;
-  }
-
-  :lang(ar) {
-    .hero__slide-icon {
-      transform: rotate(180deg);
-    }
-  }
-
-  &__slide-action {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__banner {
-    img {
-      min-height: 100vh;
-      object-fit: cover;
-    }
-  }
-}
-
-.links {
-  padding-block: $spacing-48;
-  background-color: #e6fafd;
-  &__slide-title {
-    font-size: $font-xxxl;
-    font-weight: bold;
-    color: $shams-blue-dark;
-  }
-
-  &__slide-title {
-    margin-bottom: $spacing-24;
-  }
-
-  &__slide-container {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    z-index: 1;
-    width: 100%;
-    position: relative;
-  }
-
-  &__slide-item-title {
-    opacity: 0;
-
-    visibility: hidden;
-    height: 0;
-
-    @include breakpoint($md, max) {
-      opacity: 1;
-      visibility: visible;
-      height: auto;
-    }
-
-    text-align: center;
-    @include transition-ease;
-  }
-
-  &__slide-item-logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    img {
-      max-width: 132px;
-    }
-  }
-
-  &__slide-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    background-color: #fff;
-    border: 1px solid transparent;
-    height: 200px;
-    padding: $spacing-24;
-
-    a {
-      color: $shams-blue-dark;
-    }
-    &:hover {
-      border: 1px solid $shams-blue;
-      a {
-        .links__slide-item-title {
-          opacity: 1;
-          height: auto;
-          visibility: visible;
-          margin-top: 10px;
-        }
-      }
-    }
-
-    @include breakpoint($md, max) {
-      .links__slide-item-title {
-        min-width: 200px;
-      }
-    }
-  }
-}
-
-.pattern {
-  position: relative;
-  &__video {
-    width: 100%;
-    height: 132px;
-    object-fit: cover;
-  }
-  img {
-    position: absolute;
-    inset: 0;
-    height: 132px;
-    object-fit: cover;
-    overflow: hidden;
-  }
-}
-
-.our-projects {
-  &__heading {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: $spacing-48;
-  }
-  &__title {
-    color: $shams-blue-dark;
-    font-size: $font-xxxl;
-    font-weight: 700;
-  }
-
-  &__container {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    z-index: 1;
-    width: 100%;
-    position: relative;
-    margin-top: $spacing-48;
-  }
-
-  &__cover-wrapper {
-    height: 318px;
-    position: relative;
-    overflow: hidden;
-    &:hover {
-      img.our-projects__cover-img {
-        transform: scale(1.3);
-      }
-      .our-projects__date {
-        visibility: visible;
-        left: 0;
-      }
-
-      .our-projects__overlay {
-        visibility: hidden;
-      }
-    }
-  }
-
-  &__cover {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow: hidden;
-    border-radius: $spacing-12;
-    img {
-      border-radius: $spacing-12;
-      @include transition-ease;
-    }
-  }
-  &__title {
-    h2 {
-      font-size: 24px;
-      font-weight: 700;
-      color: $shams-blue-dark;
-      display: -webkit-box;
-      display: -moz-box;
-      display: -ms-flexbox;
-
-      line-clamp: 2;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      -moz-box-orient: vertical;
-
-      overflow: hidden;
-    }
-  }
-
-  &__description {
-    padding: $spacing-24;
-    display: flex;
-    flex-direction: column;
-    gap: $spacing-16;
-  }
-
-  &__details {
-    p {
-      font-size: $font-md;
-      color: $shams-blue-dark;
-      display: -webkit-box;
-      display: -moz-box;
-      display: -ms-flexbox;
-
-      line-clamp: 2;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      -moz-box-orient: vertical;
-
-      overflow: hidden;
-    }
-  }
-  &__action {
-    margin-top: $spacing-8;
-  }
-
-  &__date {
-    width: max-content;
-    padding: $spacing-6 $spacing-12;
-    background-color: $shams-white;
-    color: $shams-blue-dark;
-    border-radius: 0 $spacing-6 $spacing-6 0;
-    position: absolute;
-    top: 76px;
-    // left: 0;
-    visibility: hidden;
-    left: -50%;
-    @include transition-ease;
-  }
-
-  &__overlay {
-    @include transition-ease;
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(0deg, $shams-blue-dark 0%, transparent 80%);
-    z-index: 99;
-    border-radius: $spacing-12;
-  }
-  &__overlay-img {
-    width: 100%;
-    position: absolute;
-    z-index: 9999999;
-    height: 50px;
-  }
-
-  .owl-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    gap: $spacing-24;
-
-    .owl-prev {
-      top: unset;
-      position: unset;
-      left: unset;
-    }
-    .owl-next {
-      top: unset;
-      position: unset;
-      left: unset;
-    }
-  }
-
-  &__owl-nav {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: $spacing-24;
-    & > * {
-      position: unset;
-      background-color: transparent;
-      color: $shams-blue;
-      font-size: 24px;
-      font-weight: 400;
-      width: 54px;
-      height: 54px;
-    }
-  }
-
-  &__overlay-pattern {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 99;
-    opacity: 0.1;
-    height: 50px;
-    img {
+      display: block;
+      z-index: 11;
+      top: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      object-position: bottom;
+      background: var(
+        --gradiant-blue,
+        linear-gradient(
+          180deg,
+          rgba(8, 38, 110, 0.5) 0%,
+          rgba(8, 38, 110, 0) 95.32%
+        )
+      );
     }
-  }
-}
-
-.news {
-  margin-bottom: 50px;
-  padding-block: $spacing-48;
-  &__heading {
-    display: flex;
-    align-items: center;
-    gap: $spacing-24;
-    h2 {
-      font-size: $font-xxxl;
-      font-weight: 700;
-      color: $shams-blue-dark;
-    }
-  }
-  &__heading-action {
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: end;
-      gap: $spacing-8;
-      padding-block: $spacing-12;
-    }
-  }
-  &__heading-action-text {
-    color: $shams-blue;
-    font-size: $font-md;
-  }
-  &__heading-action-btn {
-    color: $shams-blue;
-    background: transparent;
-    border: 1px solid $shams-blue;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-  }
-  &__tabs{
-    &__nav{
-      &.nav-pills{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        position: unset;
-        gap: unset;
-        margin-block: unset;
-        .nav-link{
-          padding: $spacing-24;
-          border-radius: 12px;
-          box-sizing: unset;
-          flex: unset;
-          width: 100%;
-          height: auto;
-          background: unset;
-          opacity: 1;
-          margin-left: unset;
-          margin-right: unset;
-          text-indent: unset;
-          border: unset;
-          &.active{
-            background: $shams-blue-light ;
-            h4,h5{
-              color: $shams-white;
-            }
-          }
-          h4{
-            @include line-clamp(2);
-            font-size: 18px;
-            text-align: right;
-            margin-bottom: 0;
-            font-weight: bold;
-            color: $shams-blue-dark;
-          }
-          h5{
-            margin-top: $spacing-8;
-            @include line-clamp(2);
-            font-size: 14px;
-            text-align: right;
-            color: $shams-blue-dark;
-          }
-        }
-      } 
-    }
-    &__content{
-      .tab-pane{
-
-      }
-      &__wrapper{
-        position: relative;
-        border-radius: 12px;
-        overflow: hidden;
-        height: 455px;
-        img{
-          height: 100%;
-          object-fit: cover;
-        }
-        .layer{
-          @include transition-ease;
-          position: absolute;
-          inset: 0;
-          background: linear-gradient(0deg, $shams-blue-dark 0%, transparent 80%);
-          z-index: 99;
-          border-radius: $spacing-12;
-        }
-        &__description{
-          padding: $spacing-24;
-          position: absolute;
-          bottom: 0;
-          z-index: 99;
-          display: flex;
-          flex-direction: column;
-          gap: 8px;
-          p{
-            font-size: 18px;
-            color: $shams-white;
-          }
-          p,h4,h5{
-            text-align: right;
-            color: $shams-white;
-          }
-          h4{
-            @include line-clamp(2);
-            font-size: 18px;
-            margin-bottom: 0;
-            font-weight: bold;
-          }
-          h5{
-            margin-top: $spacing-8;
-            @include line-clamp(2);
-            font-size: 14px;
-          }
-          .primary-btn{
-            margin-top: $spacing-24 !important;
-            margin-bottom: 0;
-            display: flex;
-            align-self: end;
-          }
-
-        }
-      }
-    }
-  }
-  .carousel-control-prev,
-  .carousel-control-next{
-    position: unset;
-    border: 1px solid $shams-blue;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin-top: $spacing-24;
-    svg{
-      color: $shams-blue;
-    }
-  }
-
-}
-
-.contact {
-  
-  &__heading {
-    border: 1px solid red;
-    border-radius: $spacing-12;
-    padding-right: $spacing-24;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: $spacing-24;
-    h2 {
-      font-size: $font-xxxl;
-      @include breakpoint($md, max) {
-        font-size: $font-xxl;
-      }
-      font-weight: 700;
-      color: $shams-blue-dark;
-    }
-  }
-
-  &__pattern {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    img {
-      width: 100px;
-      height: 100px;
-      position: absolute;
-      inset: 0;
-      object-fit: cover;
-      object-position: 61%;
-    }
-  }
-  &__content-time {
-    font-size: $font-md;
-    color: $shams-blue-dark;
-    margin-bottom: $spacing-8;
-  }
-  &__content-location {
-    font-size: $font-md;
-    font-weight: 700;
-    color: $shams-blue-dark;
-    margin-bottom: $spacing-24;
-  }
-  &__info {
-    display: flex;
-    flex-direction: column;
-    gap: $spacing-14;
-  }
-
-  &__info-item {
-    color: $shams-blue-dark;
-  }
-  &__info-title {
-    display: flex;
-    align-items: last baseline;
-    gap: $spacing-16;
-    svg {
-      font-size: 22px;
-    }
-    h5 {
-      font-size: $font-md;
-      font-weight: 700;
-    }
-  }
-  p {
-    font-size: $font-md;
-  }
-
-  &__location {
-    padding-block: $spacing-48;
-  }
-  &__social-content {
-    padding-block: $spacing-48;
-    padding-right: $spacing-24;
   }
 }
