--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -1,360 +1,377 @@
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgb($shams-blue-dark, 0.2);
-  @include breakpoint($lg, max) {
-    background-color: $shams-blue-dark;
-  }
-  width: 100%;
-
-  border-bottom: 0.5px solid $shams-blue-light;
-  padding-inline: $spacing-24;
-  position: fixed;
-  top: 0;
-  z-index: 999;
-
-  &__logo-img {
-    &--scrolled {
-      display: none;
-    }
-
-    @include breakpoint($xl, max) {
-      width: 152px;
-    }
-  }
-
-  &__logo-link {
+  display: none;
+  @include breakpoint($lg) {
     display: block;
   }
 
-  &__nav {
-    display: flex;
-    align-items: center;
-    gap: $spacing-4;
-    display: none;
-
-    @include breakpoint($lg) {
-      display: flex;
-    }
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+  &__wrapper {
+    margin: 0 calc(-141.32992px + 17.708vw);
+    font-size: calc(8.3136px + 0.48vw);
   }
 
-  &__action {
-    display: flex;
-    align-items: center;
-    gap: $spacing-8;
-  }
-
-  &__nav-list {
-    display: flex;
-    align-items: center;
-    gap: $spacing-24;
-    line-height: 44.6px;
-    @include breakpoint($lg, max) {
-      gap: $spacing-6;
-    }
-    color: $shams-white;
-    padding-inline: $spacing-24;
-  }
-
-  &__nav-item {
-    cursor: pointer;
-    position: relative;
-    padding-block: $spacing-24;
-
-    &:hover {
-      .header__nav-item-container {
-        background-color: rgba($color: $shams-blue-light, $alpha: 0.4);
-      }
-    }
-  }
-
-  &__nav-sub-list {
-    width: 100%;
+  &__logo {
+    top: calc(-6.76096px + 1.922vw);
+    left: 50%;
     position: absolute;
-    top: 93px;
-
-    @include breakpoint($lg, max) {
-      display: none !important;
-    }
-    // padding: $spacing-12 $spacing-16;
-    background-color: $shams-mint;
-    // width: 280px;
-    border-radius: 0px 0px $spacing-12 $spacing-12;
-    display: none;
-    z-index: 99;
-    @include transition-ease(0.3s, transform);
-    @include box-shadow;
+    top: 2.2rem;
+    transform: translateX(-50%);
+    visibility: visible;
   }
 
-  &__sub-list-content-title {
-    font-size: $font-xl;
-    font-weight: 700;
-    color: $shams-blue-dark;
-  }
-  &__sub-list-content-description {
-    color: $shams-blue-dark;
-    @include breakpoint($md, max) {
-      padding-bottom: $spacing-16;
-    }
-  }
-
-  &__nav-item-container {
-    border-radius: $spacing-12;
-    padding: 0 $spacing-4;
-    @include transition-ease(0.3s, background-color);
-  }
-
-  &__sub-list-media {
-    border-radius: $spacing-24;
-    overflow: hidden;
-    width: 100%;
-    video {
-      width: 361px;
-      height: 187px;
-      border-radius: $spacing-24;
-      object-fit: cover;
-    }
-  }
-
-  &__nav-sub-item {
-    padding: $spacing-16 0;
-    cursor: pointer;
-    @include transition-ease(0.3s, color);
-
-    &:hover {
-      background-color: rgba($color: $shams-blue-light, $alpha: 0.1);
-      border-radius: $spacing-12;
-      a {
-        color: $shams-blue-dark;
-      }
-      svg {
-        transform: translateX(-6px);
-      }
-    }
-
-    a {
-      display: flex;
-      align-items: baseline;
-      font-size: $font-md;
-      color: $shams-blue-light;
-      gap: $spacing-10;
-      @include transition-ease(0.3s, color);
-
-      span {
-        font-weight: 700;
-      }
-      svg {
-        font-size: $font-sm;
-        @include transition-ease(0.3s, transform);
-      }
-    }
-  }
-
-  &__sub-list-content {
+  &__utils {
     display: flex;
-    flex-direction: column;
-    gap: $spacing-4;
-  }
-
-  &__sub-list-content-media {
-    img {
-      height: 120px;
-      object-fit: cover;
-      border-radius: 12px;
-    }
-  }
-
-  &__sub-list-content-details {
-    @include line-clamp;
-    font-size: $font-sm;
-    color: rgba($color: $shams-blue-dark, $alpha: 0.5);
-  }
-  &__sub-list-content-date {
-    font-size: $font-sm;
-    color: $shams-blue-dark;
-  }
-
-  &__sub-list-action {
-    border-top: 0.5px solid $shams-blue-dark;
-    padding-top: $spacing-12;
+    color: $shams-white;
+    flex-direction: row;
+    height: calc(25.85088px + 2.884vw);
+    padding-bottom: 0;
+    justify-content: flex-end;
   }
 
   &__lang {
     display: flex;
     align-items: center;
-    border: 1px solid $shams-yellow;
-    padding: $spacing-8;
-    border-radius: $spacing-8;
-    color: $shams-white;
-    font-size: $font-md;
-    cursor: pointer;
+    justify-content: center;
+    margin-inline-end: -1rem;
+
+    &-link {
+      padding: 0.8rem 1.2rem;
+    }
   }
 
-  &__tender {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $shams-yellow;
+  .header__menu {
+    height: calc(31.55264px + 2.402vw);
     color: $shams-white;
-    padding: $spacing-8 $spacing-16;
-    border-radius: 999px;
-    font-size: $spacing-18;
+    margin: 0 auto;
     position: relative;
+  }
 
-    &--menu {
-      margin-block: $spacing-8;
-    }
-
-    @include transition-ease(0.3s, background-color);
-    z-index: 1;
-    border: 1px solid $shams-yellow;
-    &:hover {
-      @include transition-ease(0.4s, color);
-      color: $shams-yellow;
-    }
+  .header__menu-items {
+    margin: 0 calc(10.77632px - 1.924vw);
+    display: flex;
+    height: 100%;
+    position: relative;
 
     &::before {
       content: '';
       position: absolute;
-      top: 0;
       left: 0;
-      right: 0;
-      bottom: 0;
-      visibility: hidden;
-      border-radius: 999px;
-      background-color: $shams-white;
+      display: block;
       z-index: -1;
-      transform: translate(0, -100%);
+      top: 0;
+      width: calc(50% - 34.16448px - 9.364vw);
+      border-top: 1px solid $shams-white;
     }
-    &:hover::before {
-      visibility: visible;
-      transform: translate(0, 0);
-      animation: wave 0.6s linear;
-    }
-  }
-
-  &__menu {
-    &-btn {
-      width: 59px;
-      height: 50px;
-      border: none;
-      background: transparent;
-      font-size: $font-md;
-      cursor: pointer;
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: $spacing-6;
-
-      @include breakpoint($lg) {
-        display: none;
-      }
-    }
-
-    &--responsive {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: $spacing-24;
+    &::after {
+      content: '';
       position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      background-color: $shams-white;
-      padding: $spacing-24;
-      z-index: 99999;
-      display: none;
-      max-height: calc(100vh - 99px);
-      overflow-y: scroll;
-
-      &--open {
-        display: flex;
-      }
-
-      @include breakpoint($lg) {
-        display: none;
-      }
-    }
-
-    &-item {
-      padding: $spacing-16 $spacing-12;
-      border-bottom: 1px solid $shams-blue-dark;
-      a {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-    }
-
-    &-lang {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: $font-lg;
-      padding: $spacing-16 $spacing-12;
+      right: 0;
+      display: block;
+      z-index: -1;
+      top: 0;
+      width: calc(50% - 34.16448px - 9.364vw);
+      border-top: 1px solid $shams-white;
     }
   }
 
-  &__menu--open {
-    .header__menu-line-1 {
-      transform: rotate(45deg) translate(4px, 4px);
+  .header__menu-item {
+    padding: 0 calc(-10.76096px + 1.922vw);
+
+    &--space {
+      margin-inline-start: auto;
     }
-    .header__menu-line-2 {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-    .header__menu-line-3 {
-      transform: rotate(-45deg) translate(5px, -7px);
+
+    &--active {
+      border-bottom: 1px solid $shams-yellow;
+      .header__submenu {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 0.3s;
+      }
+
+      .menu-icon {
+        transform: rotate(180deg);
+        padding-block-start: unset;
+        padding-block-end: 8px;
+      }
     }
   }
 
-  &__menu-line-1,
-  &__menu-line-2,
-  &__menu-line-3 {
-    display: block;
-    width: $spacing-32;
-    height: $spacing-2;
-    background-color: $shams-white;
-    border-radius: 999px;
-    @include transition-ease;
+  &__submenu {
+    position: absolute;
+    top: 115%;
+    left: 0;
+    display: flex;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: all 0.3s;
+    padding-inline-start: 40px;
   }
 
-  @include breakpoint($lg) {
-    &--scrolled {
-      .header__logo-img {
-        display: none;
-      }
-      .header__logo-img--scrolled {
-        &:lang(ar) {
-          display: block;
-        }
-        @include breakpoint($xl, max) {
-          width: 152px;
-        }
-      }
-      .header__menu-line-1,
-      .header__menu-line-2,
-      .header__menu-line-3 {
-        background-color: $shams-blue-dark;
-      }
+  .menu__item {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    transition: opacity 0.2s, color 0.2s;
+    visibility: visible;
+    gap: 4px;
+    cursor: pointer;
+  }
 
-      .header__nav-list {
-        color: $shams-blue-dark;
-      }
+  &__submenu-item {
+    margin: 0 calc(-14.44736px + 3.402vw);
+    padding-bottom: 0.5rem;
 
-      .header__lang {
-        color: $shams-blue-dark;
-        cursor: pointer;
-      }
-      background-color: $shams-white;
+    &:hover {
+      border-bottom: 1px solid $shams-yellow;
     }
   }
 }
 
-// .header:has(.header__nav .header__nav-item--about:hover) .header__nav-sub-list {
-//   background-color:red
-//   }
+.header-top {
+  display: none;
+  @include breakpoint($lg) {
+    display: block;
+  }
+  position: fixed;
+  width: 100%;
+  top: -100px;
+  z-index: 999;
+  background-color: $shams-white;
+  transition: all 0.3s;
+  &--show {
+    top: 0;
+  }
+
+  &__wrapper {
+    margin: 0 calc(-141.32992px + 17.708vw);
+    font-size: calc(8.3136px + 0.48vw);
+    height: calc(27.32128px + 3.604vw);
+    color: $shams-blue-dark;
+  }
+
+  &__submenu-item {
+    cursor: pointer;
+  }
+
+  &__menu {
+    height: 100%;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
+
+  &__menu-items {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    gap: 1rem;
+  }
+  &__menu-item {
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    &--active {
+      .header-top__submenu {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 0.3s;
+        z-index: -1;
+      }
+    }
+  }
+
+  &__menu-item--active {
+    border-bottom: 2px solid $shams-yellow;
+    .menu-icon {
+      @include transition-ease(0.3s);
+      transform: rotate(180deg);
+      padding-block-start: unset;
+      padding-block-end: 8px;
+    }
+  }
+
+  .menu__item {
+    cursor: pointer;
+  }
+
+  &__submenu {
+    position: absolute;
+    width: 100%;
+    background-color: $shams-blue-dark;
+    padding-block: 48px;
+    padding-inline-start: 276px;
+    padding-inline-end: 48px;
+    display: flex;
+    align-items: flex-start;
+    inset-inline-start: 0;
+
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: all 0.3s;
+    z-index: -999;
+    top: 100%;
+  }
+
+  &__submenu-titles {
+    padding-inline-end: 48px;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    border-inline-end: 1px solid rgba($color: $shams-white, $alpha: 0.2);
+  }
+  &__submenu-title {
+    text-wrap: nowrap;
+    white-space: nowrap;
+    font-size: 18px;
+    line-height: 18px;
+    color: rgba($color: $shams-white, $alpha: 0.6);
+    &--active {
+      color: $shams-white;
+    }
+  }
+  &__submenu-content {
+    color: $shams-white;
+    padding-inline-start: 48px;
+    font-size: $font-sm;
+    width: 100%;
+    height: 100%;
+
+    &--variant-1 {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: flex-start;
+
+      a {
+        margin-inline-end: auto;
+      }
+    }
+  }
+}
+
+.menu-icon,
+.menu-icon-r {
+  @include transition-ease(0.3s);
+  font-size: 10px;
+  padding-block-start: 8px;
+}
+
+.header-mobile {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  inset-inline-start: 0;
+  z-index: 99;
+  @include breakpoint($lg) {
+    display: none;
+  }
+  &__wrapper {
+    font-size: calc(8.3136px + 0.48vw);
+    height: calc(27.32128px + 3.604vw);
+    margin: 0 calc(8.39664px + 3.086vw);
+    padding-block: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+.mobile-menu-icon {
+  font-size: 1.5rem;
+  color: $shams-white;
+  cursor: pointer;
+}
+
+.drawer {
+  height: 100dvh;
+  background-color: $shams-blue-dark;
+  position: absolute;
+  inset-block: 0;
+  inset-inline-start: 150%;
+  inset-inline-end: 0;
+  color: $shams-white;
+  @include transition-ease;
+  &--active {
+    inset-inline-start: 0;
+  }
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-block-start: 28px;
+    padding-block-end: 1rem;
+    background-color: $shams-blue-darker;
+    font-size: 28px;
+    padding-inline: 1rem;
+  }
+
+  &__title {
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+    cursor: pointer;
+  }
+
+  &__title-icon {
+    font-size:$font-xl ;
+  }
+
+  &__close {
+    cursor: pointer;
+  }
+
+  &__item {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+
+    &:nth-child(1),
+    &:hover {
+      background-color: $shams-navy;
+    }
+  }
+
+  &__item-title {
+    font-size: 28px;
+  }
+
+  &__submenu {
+    display: none;
+
+    &-title {
+      display: flex;
+      align-items: flex-start;
+      gap: 4px;
+    }
+
+    &-item {
+      padding: 1rem;
+      display: flex;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $shams-navy;
+      }
+    }
+
+    &-item-title {
+      font-size: 28px;
+    }
+  }
+}
+
+.drawer-icon-r {
+  font-size: 12px;
+  &:lang(ar) {
+    transform: rotate(180deg);
+  }
+}
