--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -10,6 +10,8 @@
     padding-block-start: $spacing-48;
     @include breakpoint($sm) {
       background: url('/assets/img/static/footer.webp');
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 
