--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -36,6 +36,7 @@ $shams-blue-light: #00c4e5;
 $shams-yellow: #ffad36;
 $shams-mint: #e6fafd;
 $shams-gray: #898d8d;
+$shams-gray-light: #E6E6E6;
 
 //////////////////////
 //fonts
