--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -173,3 +173,173 @@
     }
   }
 }
+
+.contact-info {
+  padding-top: $spacing-48;
+  background-color: $shams-mint;
+  padding-bottom: 100px;
+  &__title {
+    font-size: 38px;
+    color: $shams-blue;
+    margin-bottom: $spacing-48;
+  }
+  &__desc {
+    font-size: $font-md;
+    color: $shams-blue;
+    margin-bottom: $spacing-48;
+  }
+
+  &__action-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__action {
+    display: flex;
+    color: $shams-gray;
+    width: 70%;
+    flex-direction: column;
+    row-gap: $spacing-24;
+    @include breakpoint($lg) {
+      flex-direction: row;
+    }
+  }
+
+  &__box {
+    background: $shams-yellow;
+    position: relative;
+    overflow: hidden;
+
+    &:hover::before {
+      transform: scale(2000%);
+      background-color: $shams-yellow;
+    }
+    &:hover {
+      .box__content {
+        color: $shams-white;
+      }
+      .box__icon > svg {
+        stroke: $shams-white;
+      }
+      .box__icon > svg.envlope {
+        fill: $shams-white;
+      }
+    }
+
+    &::before {
+      @include breakpoint($lg) {
+        content: '';
+      }
+      @include transition-ease;
+      width: 93px;
+      height: 48px;
+      background-color: rgba($color: $shams-yellow, $alpha: 0.2);
+      clip-path: polygon(
+        98.992% 34.694%,
+        98.992% 34.694%,
+        97.623% 28.223%,
+        94.265% 22.504%,
+        89.272% 17.506%,
+        82.999% 13.195%,
+        75.8% 9.541%,
+        68.032% 6.511%,
+        60.048% 4.074%,
+        52.204% 2.198%,
+        44.854% 0.85%,
+        38.354% 0%,
+        38.354% 0%,
+        34.397% 0.222%,
+        29.904% 0.944%,
+        25.086% 2.248%,
+        20.154% 4.219%,
+        15.322% 6.939%,
+        10.799% 10.491%,
+        6.8% 14.96%,
+        3.535% 20.428%,
+        1.216% 26.978%,
+        0.056% 34.694%,
+        0.056% 34.694%,
+        1.15% 45.545%,
+        5.239% 56.849%,
+        11.612% 67.957%,
+        19.562% 78.22%,
+        28.38% 86.99%,
+        37.358% 93.616%,
+        45.786% 97.451%,
+        52.958% 97.845%,
+        58.163% 94.149%,
+        60.694% 85.714%,
+        60.694% 85.714%,
+        62.571% 76.131%,
+        66.005% 69.045%,
+        70.575% 63.894%,
+        75.86% 60.114%,
+        81.439% 57.143%,
+        86.89% 54.416%,
+        91.792% 51.371%,
+        95.724% 47.445%,
+        98.264% 42.073%,
+        98.992% 34.694%
+      );
+
+      position: absolute;
+      top: 40%;
+    }
+
+    @include breakpoint($lg, max) {
+      color: $shams-white;
+    }
+    @include breakpoint($lg) {
+      background: rgba(242, 242, 243, 0.4);
+    }
+    padding: $spacing-48 $spacing-24;
+    height: 256px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: baseline;
+    @include breakpoint($lg) {
+      border: 1px solid $shams-gray-light;
+    }
+    &:first-child {
+      border-inline-end: none;
+    }
+  }
+}
+.box {
+  &__text {
+    text-align: center;
+  }
+  &__icon {
+    & > svg {
+      stroke: $shams-white;
+      @include breakpoint($lg) {
+        stroke: $shams-blue;
+      }
+    }
+    & > svg.envlope {
+      fill: $shams-white;
+      @include breakpoint($lg) {
+        fill: $shams-blue;
+      }
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    position: relative;
+    z-index: 9;
+  }
+
+  &__arrow {
+    @include breakpoint($lg) {
+      color: $shams-blue-light;
+    }
+  }
+}
