--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -1,3 +1,5 @@
 @import './buttons';
 @import './circle-pregress-circle';
 @import './scroll-down.scss';
+@import './modal.scss';
+@import './breadcrumb.scss';
