--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -23,6 +23,8 @@
 }
 
 .about {
+  background: url('/assets/img/static/home-sections-bg.png') no-repeat center center;
+  background-size: cover;
   padding-block: $spacing-48;
   @include breakpoint($lg) {
     padding-block: 125px;
@@ -68,6 +70,58 @@
   }
 }
 
+.main-activites{
+  background: $shams-blue-dark;
+  color: $shams-white;
+  padding-top: 150px;
+  height: 100vh;
+  overflow: hidden;
+  clip-path: polygon(0% 0%, 16% 4%, 50% 10%, 100% 0%, 100% 0, 100% 100%, 0 100%);
+  
+  
+  img{
+    border-radius: 24px;
+  }
+  .activity-card{
+    margin-bottom: 100px;
+    position: relative;
+    .title{
+      position: absolute;
+      left: 360px;
+      top: 50px;
+      h3{
+        margin-bottom: 16px;
+        font-family: "DIN";
+        font-size: 78px;
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+    }
+    .desc{
+      padding-inline-start: 48px;
+      p{
+        margin-bottom: 48px;
+        font-family: "DIN";
+        font-size: 18px;
+        font-weight: 400;
+        display: block;
+        margin-top: 200px;
+      }
+
+    }
+  }
+  .scroll-down{
+    margin-block-start: 34px;
+    position: inherit;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    &__text{
+      transform: rotate(270deg);
+    }
+  }
+}
+
 .our-partener {
   &__media {
     position: relative;
@@ -106,6 +160,8 @@
 }
 
 .news {
+  background: url('/assets/img/static/home-sections-bg.png') no-repeat center center;
+  background-size: cover;
   padding-block: $spacing-48;
 
   &__heading {
@@ -175,8 +231,9 @@
 }
 
 .contact-info {
+  background: url('/assets/img/static/contact-bg.png') no-repeat center center;
+  background-size: cover;
   padding-top: $spacing-48;
-  background-color: $shams-mint;
   padding-bottom: 100px;
   &__title {
     font-size: 38px;
